# RS-analysis

./: README.md  lib.rs  main.py  requirements.txt
Docs/: readme.md
debug/: main.py  test.py
debug/data/: preds.json  price_series.json  rs_series.json  test.json
debug_py/: graphs.py  load_data.py  price_series.json  test.py
rs_workspace/: Cargo.toml  readme.md
rs_workspace/akaike-optim/: Cargo.toml
rs_workspace/akaike-optim/src/: lib.rs
rs_workspace/arfima/: Cargo.toml
rs_workspace/arfima/src/: lib.rs
rs_workspace/arma/: Cargo.toml
rs_workspace/arma/src/: lib.rs
rs_workspace/box-cox/: Cargo.toml
rs_workspace/box-cox/src/: lib.rs
rs_workspace/common/: Cargo.toml
rs_workspace/common/src/: lib.rs
rs_workspace/confidence-intervals/: Cargo.toml
rs_workspace/confidence-intervals/src/: lib.rs
rs_workspace/config-manager/: Cargo.toml
rs_workspace/config-manager/src/: lib.rs
rs_workspace/debug_py/: common.py  graphs.py  load_data.py  price_series.json  test.py
rs_workspace/forecast/: Cargo.toml
rs_workspace/forecast/src/: lib.rs
rs_workspace/frac-integration/: Cargo.toml
rs_workspace/frac-integration/src/: lib.rs
rs_workspace/pacf-acf/: Cargo.toml
rs_workspace/pacf-acf/src/: lib.rs
rs_workspace/precision/: Cargo.toml
rs_workspace/precision/src/: lib.rs
rs_workspace/price/: Cargo.toml
rs_workspace/price/src/: lib.rs
rs_workspace/price_series/: Cargo.toml
rs_workspace/rs/: Cargo.toml
rs_workspace/rs-analysis/: Cargo.toml
rs_workspace/rs_series/: Cargo.toml
rs_workspace/rslogic/: Cargo.toml
rs_workspace/rslogic/src/: lib.rs
rs_workspace/s-h-esd/: Cargo.toml
rs_workspace/sarfimax_model/: Cargo.toml
rs_workspace/sarfimax_model/src/: lib.rs
rsapp/: comms.py  gui.py  main.py  pyproject.toml  readme.md
rsapp/src/: config.json  date_picker.py  interval_picker.py  lib_handler.py  main.py  other_parameters.py  packer.py  time_picker.py  trade_pair_input.py
rslogic/: Cargo.toml  lib.rs
(+8 files in other folders)
