[package]
name = "arfima"
version = "0.1.0"
edition = "2024"

[dependencies]
s-h-esd = {path = "../s-h-esd"}
common = { path = "../common" }
box-cox = { path = "../box-cox" }
serde_json = "1.0"
config-manager = {path = "../config-manager" }
pacf-acf = {path = "../pacf-acf" }
akaike-optim = {path = "../akaike-optim"}
nalgebra = "0.33.2"