[package]
name = "rslogic"
version = "0.1.0"
edition = "2024"

[dependencies]
price_series = { path = "/media/brbrssr/subdisk/code/rs_workspace/price_series" }
rs_series = { path = "/media/brbrssr/subdisk/code/rs_workspace/rs_series" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[lib]
crate-type = ["cdylib"]
