[package]
name = "sarfimax_model"
version = "0.1.0"
edition = "2024"

[dependencies]
s-h-esd = { path = "../s-h-esd" }
box-cox = { path = "../box-cox" }
rs-analysis = { path = "../rs-analysis"}
frac-integration = { path = "../frac-integration"}
utils = { path = "../utils"}
pacf-acf = { path = "../pacf-acf"}
arma = { path = "../arma" }
forecast = { path = "../forecast" }
confidence-intervals = { path = "../confidence-intervals"}

pyo3 = { version = "0.25.0", features = ["extension-module", "macros", "auto-initialize"] }
numpy = { version = "0.25.0" }

